syntax = "proto3";

package proto;

option go_package = "rusve/proto";

enum FileType {
    FILE_UNSET = 0;
    FILE_DOCUMENT = 1;
    FILE_AVATAR = 2;
}

message File {
    string id = 1;
    string created = 2;
    string updated = 3;
    string deleted = 4;

    string target_id = 5;
    string file_name = 6;
    string file_size = 7;
    FileType file_type = 8;

    bytes file_buffer = 9;
}

message Email {
    string id = 1;
    string created = 2;
    string updated = 3;
    string deleted = 4;

    string target_id = 5;
    string email_to = 6;
    string email_from = 7;
    string email_from_name = 8;
    string email_subject = 9;
    string email_body = 10;
}
